[workspace]
resolver = "2"

package.authors = ["AD4MANTIS"]
members = ["day-*"]

[workspace.dependencies]
lib = { path = "lib" }
thiserror = "1.0.50"
itertools = "0.12.0"

[profile.release-with-symbols]
inherits = "release"
debug = true

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
